; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_dir.c_setup_cifs_dentry.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_dir.c_setup_cifs_dentry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cifs_tcon = type { i64 }
%struct.dentry = type { i32* }
%struct.inode = type { i32 }

@cifs_ci_dentry_ops = common dso_local global i32 0, align 4
@cifs_dentry_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cifs_tcon*, %struct.dentry*, %struct.inode*)* @setup_cifs_dentry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_cifs_dentry(%struct.cifs_tcon* %0, %struct.dentry* %1, %struct.inode* %2) #0 {
  %4 = alloca %struct.cifs_tcon*, align 8
  %5 = alloca %struct.dentry*, align 8
  %6 = alloca %struct.inode*, align 8
  store %struct.cifs_tcon* %0, %struct.cifs_tcon** %4, align 8
  store %struct.dentry* %1, %struct.dentry** %5, align 8
  store %struct.inode* %2, %struct.inode** %6, align 8
  %7 = load %struct.cifs_tcon*, %struct.cifs_tcon** %4, align 8
  %8 = getelementptr inbounds %struct.cifs_tcon, %struct.cifs_tcon* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load %struct.dentry*, %struct.dentry** %5, align 8
  %13 = getelementptr inbounds %struct.dentry, %struct.dentry* %12, i32 0, i32 0
  store i32* @cifs_ci_dentry_ops, i32** %13, align 8
  br label %17

14:                                               ; preds = %3
  %15 = load %struct.dentry*, %struct.dentry** %5, align 8
  %16 = getelementptr inbounds %struct.dentry, %struct.dentry* %15, i32 0, i32 0
  store i32* @cifs_dentry_ops, i32** %16, align 8
  br label %17

17:                                               ; preds = %14, %11
  %18 = load %struct.dentry*, %struct.dentry** %5, align 8
  %19 = load %struct.inode*, %struct.inode** %6, align 8
  %20 = call i32 @d_instantiate(%struct.dentry* %18, %struct.inode* %19)
  ret void
}

declare dso_local i32 @d_instantiate(%struct.dentry*, %struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
